[gd_scene load_steps=19 format=3 uid="uid://dhw0may3xvnh"]

[ext_resource type="Script" uid="uid://df2q51gonkda4" path="res://scenes/main_game.gd" id="1_d2op2"]
[ext_resource type="Texture2D" uid="uid://b3x317fwi7l45" path="res://assets/sprites/tower/alienTower(normal) .png" id="2_0rdsr"]
[ext_resource type="Script" uid="uid://ci5b5orypbxfe" path="res://scenes/sprite_2d.gd" id="2_72e8q"]
[ext_resource type="Texture2D" uid="uid://2h4c4bcu8aof" path="res://assets/backgrounds/bg3.png" id="2_ipu61"]
[ext_resource type="Texture2D" uid="uid://dols2wjpw2bmb" path="res://assets/icons/gorillaicon.png" id="3_wi4c7"]
[ext_resource type="Texture2D" uid="uid://vdbhmtk84bgv" path="res://assets/icons/monkeyicon.png" id="4_70vka"]
[ext_resource type="Texture2D" uid="uid://dd7qsscix2g2f" path="res://assets/sprites/tower/bananaShip(normal).png" id="4_ipu61"]
[ext_resource type="Texture2D" uid="uid://bcmmws25488fy" path="res://assets/sprites/monkeys/meme monke/monke_cropped.png" id="5_sp04v"]
[ext_resource type="Script" uid="uid://dfe8btiwai2qq" path="res://scenes/area_2d.gd" id="6_70vka"]
[ext_resource type="AudioStream" uid="uid://cn5gywui584ns" path="res://assets/music/win.mp3" id="9_2l77h"]
[ext_resource type="AudioStream" uid="uid://qsho11kwvn03" path="res://assets/music/place.mp3" id="10_nqdth"]
[ext_resource type="AudioStream" uid="uid://8eggo8elvjqb" path="res://assets/music/sfx_duringGame_B.mp3" id="11_5cypo"]
[ext_resource type="Script" uid="uid://dxw0s8h21xu6k" path="res://scenes/monke_base.gd" id="12_8xp80"]
[ext_resource type="AudioStream" uid="uid://d3yit2g084wyu" path="res://assets/music/upgTower.mp3" id="12_o6v7o"]
[ext_resource type="AudioStream" uid="uid://cb1g8ym36bwrl" path="res://assets/music/fail.mp3" id="14_sp04v"]
[ext_resource type="Texture2D" uid="uid://bfd2008tld7hn" path="res://assets/sprites/coins/new monkey coin.png" id="16_ihbck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihbon"]
bg_color = Color(0.455344, 0.666909, 0.390617, 1)

[sub_resource type="MeshTexture" id="MeshTexture_2l77h"]

[node name="Main game" type="Node"]
script = ExtResource("1_d2op2")

[node name="Bg3" type="Sprite2D" parent="."]
position = Vector2(320, 177.5)
scale = Vector2(0.417969, 0.379883)
texture = ExtResource("2_ipu61")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -325.0
offset_top = -110.0
offset_right = 325.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ihbon")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(610, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HSplitContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(640, 100)
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_icons/icon = SubResource("MeshTexture_2l77h")
icon = ExtResource("3_wi4c7")

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
text = "
"
icon = ExtResource("4_70vka")

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("5_sp04v")

[node name="upgradeTower" type="Button" parent="PanelContainer/MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade Tower
"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(536, 268)

[node name="coin" type="Timer" parent="."]
autostart = true

[node name="coinlabel" type="Label" parent="."]
offset_left = 610.0
offset_top = 18.0
offset_right = 620.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.893008, 0.741481, 0, 1)
text = "0"

[node name="enemyBase" type="Area2D" parent="." groups=["tower"]]
script = ExtResource("6_70vka")

[node name="Sprite2D" type="Sprite2D" parent="enemyBase"]
position = Vector2(76, 223)
texture = ExtResource("2_0rdsr")
script = ExtResource("2_72e8q")

[node name="enemySpawn" type="Timer" parent="enemyBase/Sprite2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemyBase"]
position = Vector2(76, 223)
polygon = PackedVector2Array(-2, -71, -2, -69.4, -2.4, -69, -4.7, -69, -7, -62.2, -7, -61.6, -8.2, -61, -10.6, -61, -11.6, -59, -13.4, -59, -16, -56.4, -16, -54.5, -21, -50.5, -21, -48.6, -24.2, -47, -26.5, -47, -29.5, -43, -31, -43, -31, -7.8, -37.3, -6, -39, -6, -39, 4.6, -34, 7.6, -34, 16.6, -34.4, 17, -35.9, 17, -37, 24.9, -37, 29.3, -41.2, 31, -43, 31, -43, 41.6, -46.4, 45, -47.6, 45, -49.6, 49, -51, 49, -51, 60.4, -54.2, 62, -56, 62, -56, 70, 55, 70, 55, 62.3, 50, 60.3, 50, 49.6, 42, 41.6, 42, 31.4, 39.2, 30, 36.4, 30, 36, 29.6, 36, 25.4, 33.2, 24, 33, 7.6, 38, 5.7, 38, -5.8, 30, -7.8, 30, -44.5, 25.3, -48, 22.4, -48, 22, -48.4, 22, -50.5, 16, -55.5, 16, -57.5, 9.3, -62, 7.6, -62, 6, -65.2, 6, -68.6, 4, -69.6, 4, -71)

[node name="Label" type="Label" parent="enemyBase"]
offset_left = 40.0
offset_top = 122.0
offset_right = 119.0
offset_bottom = 145.0
text = "Health: 10"

[node name="win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2l77h")

[node name="placce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_nqdth")

[node name="bgMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_5cypo")
volume_db = -4.952
autoplay = true

[node name="towerUpg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_o6v7o")

[node name="monkeBase" type="Area2D" parent="." groups=["monketower"]]
script = ExtResource("12_8xp80")

[node name="Base" type="Sprite2D" parent="monkeBase"]
position = Vector2(532, 221)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_ipu61")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="monkeBase"]
position = Vector2(532, 221)
scale = Vector2(0.8, 0.8)
polygon = PackedVector2Array(-13, -90, -13, -89, -18.3, -89, -29, -81.5, -31, -81, -31, -80.1, -44, -81, -51.4, -81, -54.4, -78, -56, -78, -56, -68.4, -51, -65.4, -51, -64, -40.4, -64, -38.4, -68, -20.4, -68, -18, -65.6, -18, -63.3, -15, -62.4, -21.6, -62, -22.6, -60, -30.6, -60, -31.6, -58, -35.4, -58, -46.4, -47, -48.4, -47, -58.4, -36, -59.8, -36, -61, -31.1, -61, -26.6, -63, -25.6, -63, -13.7, -66, -12.7, -66, -2, -82.5, -2, -86.5, 4, -88, 4, -88, 18.4, -82, 24.4, -82, 26, -76.4, 26, -85.4, 35, -87, 35, -87, 37.6, -97.4, 48, -98.8, 48, -100, 52.9, -100, 71.4, -98.4, 73, -97, 73, -97, 74.4, -94.4, 77, -93, 77, -93, 78.6, -91, 79.6, -91, 80.7, -84.2, 83, -71, 83, -71, 84, -77.4, 84, -79, 85.6, -79, 86.2, -83, 87.2, -83, 90.3, -86, 91.3, -86, 99, -42, 100, -10.6, 100, -9, 98.4, -9, 90.4, -11.8, 89, 7.5, 89, 11, 84.3, 11, 83, 36, 83, 34.8, 84, 32.5, 84, 30.5, 87, 28.9, 87, 30, 98.1, 30, 100, 63.2, 100, 68.2, 98, 77.4, 98, 79, 96.4, 79, 87.6, 77.4, 86, 72.6, 86, 72, 84.8, 72, 83, 67.4, 83, 63, 78.6, 63, 77.2, 59, 76.2, 59, 75, 86.4, 75, 89.4, 72, 90.8, 72, 92.8, 65, 94, 65, 94, 49.4, 92, 48.4, 92, 44.4, 90, 43.4, 90, 40.3, 87, 39.3, 87, 34.6, 85.4, 33, 83.6, 33, 80.6, 28, 80, 28, 80, 20.3, 77, 19.3, 77, 13.5, 71.4, 9, 70, 9, 70, 7.6, 66.4, 4, 65, 4, 65, -16.3, 63, -19.3, 63, -23.6, 61, -24.6, 61, -30.4, 59.4, -32, 58, -32, 58, -33.6, 56, -34.6, 56, -37.4, 52.4, -41, 51, -41, 51, -42.5, 47, -45.5, 47, -47.5, 43.3, -50, 42, -50, 42, -51.4, 40.4, -53, 38.5, -53, 35.5, -57, 33.7, -57, 32.7, -60, 25, -60, 25, -63.6, 23, -64.6, 23, -66.4, 14.4, -76, 13.6, -76, 11.6, -80, 10, -80, 10, -82.6, 8, -83.6, 8, -84.7, -3, -88.7, -3, -90)

[node name="Label" type="Label" parent="monkeBase"]
offset_left = 491.0
offset_top = 119.0
offset_right = 570.0
offset_bottom = 142.0
text = "Health: 10"

[node name="fail" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_sp04v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NewMonkeyCoin" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(15, 365)
scale = Vector2(0.0175, 0.0175)
texture = ExtResource("16_ihbck")

[node name="Label" type="Label" parent="CanvasLayer/NewMonkeyCoin"]
offset_left = 571.432
offset_top = -742.857
offset_right = 1142.43
offset_bottom = 619.143
theme_override_colors/font_color = Color(1, 0.788235, 0, 1)
theme_override_font_sizes/font_size = 1000
text = "5"
metadata/_edit_use_anchors_ = true

[node name="NewMonkeyCoin2" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(591, 30)
scale = Vector2(0.025, 0.025)
texture = ExtResource("16_ihbck")

[node name="NewMonkeyCoin3" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(142, 367)
scale = Vector2(0.0175, 0.0175)
texture = ExtResource("16_ihbck")

[node name="Label" type="Label" parent="CanvasLayer/NewMonkeyCoin3"]
offset_left = 571.432
offset_top = -742.857
offset_right = 1142.43
offset_bottom = 619.143
theme_override_colors/font_color = Color(1, 0.788235, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 1000
text = "2"
metadata/_edit_use_anchors_ = true

[node name="NewMonkeyCoin4" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(272, 365)
scale = Vector2(0.0175, 0.0175)
texture = ExtResource("16_ihbck")

[node name="Label" type="Label" parent="CanvasLayer/NewMonkeyCoin4"]
offset_left = 571.432
offset_top = -742.857
offset_right = 1142.43
offset_bottom = 619.143
theme_override_colors/font_color = Color(1, 0.788235, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 1000
text = "20"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HSplitContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HSplitContainer/upgradeTower" to="." method="_on_upgrade_tower_pressed"]
[connection signal="timeout" from="coin" to="." method="_on_coin_timeout"]
[connection signal="timeout" from="enemyBase/Sprite2D/enemySpawn" to="enemyBase/Sprite2D" method="_on_enemy_spawn_timeout"]
[connection signal="finished" from="win" to="." method="_on_win_finished"]
[connection signal="finished" from="fail" to="." method="_on_fail_finished"]
